--- a/assignment2/assignment2/Views/Orders/Index.cshtml
+++ b/assignment2/assignment2/Views/Orders/Index.cshtml
@@ -14,6 +14,7 @@
 
 <form asp-action="Index" method="get">
     <div name="pageSize" on="submit()" class="mb-3">
+        <input type="hidden" name="pageNumber" value="@Model.PageIndex" />
         <button class="btn btn-primary" name="pageSize" value="5">5 Orders Per Page</button>
         <button class="btn btn-primary" name="pageSize" value="10">10 Orders Per Page</button>
         <button class="btn btn-primary" name="pageSize" value="20">20 Orders Per Page</button>
@@ -24,21 +25,25 @@
     <li class="page-item @prevDisabled">
         <a asp-action="Index"
            asp-route-pageNumber="1"
+           asp-route-pageSize="@ViewBag.PageSize"
            class="page-link">First</a>
     </li>
     <li class="page-item @prevDisabled">
         <a asp-action="Index"
            asp-route-pageNumber="@(Model.PageIndex - 1)"
+           asp-route-pageSize="@ViewBag.PageSize"
            class="page-link">Previous</a>
     </li>
     <li class="page-item @nextDisabled">
         <a asp-action="Index"
            asp-route-pageNumber="@(Model.PageIndex + 1)"
+           asp-route-pageSize="@ViewBag.PageSize"
            class="page-link">Next</a>
     </li>
     <li class="page-item @nextDisabled">
         <a asp-action="Index"
            asp-route-pageNumber="@Model.TotalPages"
+           asp-route-pageSize="@ViewBag.PageSize"
            class="page-link">Last</a>
     </li>
 </ul>
